--- a/style.css
+++ b/style.css
@@ -649,6 +649,7 @@ footer .social-links {
   }
 
   footer .wrapper{
+    display: grid;
     grid-template-columns: 1fr 2fr 3fr;
     grid-template-areas: 'A B C';
     align-items: center;
